@@ -17,20 +17,26 @@
 // @formatter:off
 package com.jayway.restassured.module.mockmvc;
 
+import com.jayway.restassured.function.RestAssuredFunction;
 import com.jayway.restassured.module.mockmvc.http.HeaderController;
 import com.jayway.restassured.response.Header;
 import com.jayway.restassured.response.Headers;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
+import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.ExpectedException;
 
 import java.util.HashMap;
 import java.util.Map;
 
 import static com.jayway.restassured.module.mockmvc.RestAssuredMockMvc.given;
-import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.*;
 
 public class HeaderTest {
+
+    @Rule
+    public ExpectedException exception = ExpectedException.none();
 
     @BeforeClass
     public static void configureMockMvcInstance() {
@@ -51,6 +57,35 @@ public class HeaderTest {
         then().
                 statusCode(200).
                 body("headerName", equalTo("John Doe"));
+    }
+
+    @Test public void
+    can_use_mapping_function_when_validating_header_value() {
+        given().
+                header(new Header("headerName", "200")).
+        when().
+                get("/header").
+        then().
+                header("Content-Length", new RestAssuredFunction<String, Integer>() {
+                                                public Integer apply(String s) {
+                                                    return Integer.parseInt(s);
+                                                }}, lessThanOrEqualTo(1000));
+    }
+
+    @Test public void
+    validate_may_fail_when_using_mapping_function_when_validating_header_value() {
+        exception.expect(AssertionError.class);
+        exception.expectMessage("Expected header \"Content-Length\" was not a value greater than <1000>, was \"45\". Headers are:");
+
+        given().
+                header(new Header("headerName", "200")).
+        when().
+                get("/header").
+        then().
+                header("Content-Length", new RestAssuredFunction<String, Integer>() {
+                                                public Integer apply(String s) {
+                                                    return Integer.parseInt(s);
+                                                }}, greaterThan(1000));
     }
 
     @Test public void
