@@ -16,6 +16,7 @@
 
 package com.jayway.restassured.specification;
 
+import com.jayway.restassured.function.RestAssuredFunction;
 import com.jayway.restassured.http.ContentType;
 import com.jayway.restassured.parsing.Parser;
 import com.jayway.restassured.response.Response;
@@ -368,6 +369,26 @@ public interface ResponseSpecification extends RequestSender {
      * @return the response specification
      */
     ResponseSpecification header(String headerName, Matcher<?> expectedValueMatcher);
+
+    /**
+     * Expect that a response header matches the supplied header name and hamcrest matcher using a mapping function.
+     * <p>
+     * E.g. expect that the response of the GET request to "/something" contains header <tt>Content-Length: 500</tt> and you want to
+     * validate that the length must always be less than 600:
+     * <pre>
+     * when().
+     *        get("/something").
+     * then().
+     *        header("Content-Length", Integer::parseInt, lessThan(600));
+     * </pre>
+     * </p>
+     *
+     * @param headerName           The name of the expected header
+     * @param mappingFunction      Map the header to another value type before exposing it to the Hamcrest matcher
+     * @param expectedValueMatcher The Hamcrest matcher that must conform to the value
+     * @return the response specification
+     */
+    <T> ResponseSpecification header(String headerName, RestAssuredFunction<String, T> mappingFunction, Matcher<? super T> expectedValueMatcher);
 
     /**
      * Expect that a response header matches the supplied name and value.
